--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <div>
             <h2>Image</h2>
-            <img width="500px" src="https://images.ctfassets.net/hrltx12pl8hq/28ECAQiPJZ78hxatLTa7Ts/2f695d869736ae3b0de3e56ceaca3958/free-nature-images.jpg?fit=fill&w=1200&h=630" alt="Sample Image">
+            <img width="500px" src="https://ibb.co/q3KzqHCV" alt="Sample Image">
         </div>
         
         <div>
