--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <div>
             <h2>Image</h2>
-            <img width="500px" src="https://ibb.co/q3KzqHCV" alt="Sample Image">
+            <a href="https://ibb.co/q3KzqHCV"><img src="https://i.ibb.co/nN9TdXBt/img1.jpg" alt="sample image" border="0"></a>
         </div>
         
         <div>
