--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <div>
             <h2>Image</h2>
-            <a href="https://ibb.co/q3KzqHCV"><img src="https://i.ibb.co/nN9TdXBt/img1.jpg" alt="sample image" border="0"></a>
+            <img width="500px" src="https://media.licdn.com/dms/image/v2/D4E22AQFjVMsE1KIIjA/feedshare-shrink_800/B4EZSzNySvHoAg-/0/1738173524265?e=2147483647&v=beta&t=IwL-OSPIvWTMxYRppcNoKU9nUMjAs6vaBGDi9rPBkL0" alt="Sample Image">
         </div>
         
         <div>
